--- a/src/app/core/order/order.component.html
+++ b/src/app/core/order/order.component.html
@@ -4,8 +4,9 @@
           <div class="container-fluid">
               <h3 class="text-dark mb-4">Orders</h3>
               <div class="card shadow">
-                  <div class="card-header py-3">
+                  <div class="card-header py-3 d-flex justify-content-between">
                       <p class="text-primary m-0 fw-bold">Manage all your orders</p>
+                      <a href="/order/create" class="btn btn-dark btn-sm" routerLink="create">Create order</a>
                   </div>
                   <div class="card-body">
                       <div class="table-responsive table" id="dataTable" role="grid" aria-describedby="dataTable_info">
@@ -20,6 +21,24 @@
                                   </tr>
                               </thead>
                               <tbody>
+                                <ng-container *ngFor="let item of list; let i = index">
+                                  <tr>
+                                    <td>{{ item.id }}</td>
+                                    <td>{{ item.type }}</td>
+                                    <td>{{ item.date }}</td>
+                                    <td>{{ item.status }}</td>
+                                    <td>
+                                      <div class="btn-group">
+                                        <button type="button" class="btn btn-primary btn-sm" (click)="editItem(i)">
+                                          Edit
+                                        </button>
+                                        <button type="button" class="btn btn-danger btn-sm" (click)="deleteItem(i)">
+                                          Delete
+                                        </button>
+                                      </div>
+                                    </td>
+                                  </tr>
+                                </ng-container>
                               </tbody>
                           </table>
                       </div>
