--- a/src/app/core/user/manage-user/manage-user.component.html
+++ b/src/app/core/user/manage-user/manage-user.component.html
@@ -35,7 +35,7 @@
               />
             </div>
             <div class="d-flex justify-content-end">
-              <button type="button" class="btn btn-primary mr-1">Submit</button>
+              <button type="button" class="btn btn-primary mr-1" (click)="submit()">Submit</button>
               <a class="btn btn-secondary" routerLink="/users/">cancel</a>
             </div>
           </form>
