[Rostom] update forms

--- a/src/app/core/user/manage-user/manage-user.component.html
+++ b/src/app/core/user/manage-user/manage-user.component.html
@@ -9,29 +9,35 @@
           </div>
           <form class="ml-4 mr-4 mt-4 mb-4">
             <div class="form-group">
-              <label for="Name">Name</label>
+              <label for="Email">Email</label>
               <input
                 type="text"
                 class="form-control"
-                id="Name"
-                placeholder="Name"
+                id="Email"
               />
             </div>
             <div class="form-group">
-              <label for="Description">Description</label>
-              <textarea
+              <label for="Username">Username</label>
+              <input
+                type="text"
                 class="form-control"
-                id="Description"
-                rows="3"
-              ></textarea>
+                id="Username"
+              />
             </div>
             <div class="form-group">
-              <label for="price">Price</label>
+              <label for="Password">Password</label>
               <input
-                type="number"
+                type="password"
                 class="form-control"
-                id="price"
-                placeholder="12"
+                id="Password"
+              />
+            </div>
+            <div class="form-group">
+              <label for="Role">Role</label>
+              <input
+                type="Role"
+                class="form-control"
+                id="Role"
               />
             </div>
             <div class="d-flex justify-content-end">
