--- a/src/app/core/event/manage-event/manage-event.component.html
+++ b/src/app/core/event/manage-event/manage-event.component.html
@@ -14,7 +14,7 @@
                 type="text"
                 class="form-control"
                 id="Name"
-                placeholder="Name"
+                
               />
             </div>
             <div class="form-group">
@@ -26,12 +26,19 @@
               ></textarea>
             </div>
             <div class="form-group">
-              <label for="price">Price</label>
+              <label for="beginDate">Begin Date</label>
               <input
                 type="number"
                 class="form-control"
-                id="price"
-                placeholder="12"
+                id="beginDate"
+              />
+            </div>
+            <div class="form-group">
+              <label for="endDate">End Date</label>
+              <input
+                type="number"
+                class="form-control"
+                id="endDate"
               />
             </div>
             <div class="d-flex justify-content-end">
