--- a/src/app/core/order/manage-order/manage-order.component.html
+++ b/src/app/core/order/manage-order/manage-order.component.html
@@ -9,29 +9,27 @@
           </div>
           <form class="ml-4 mr-4 mt-4 mb-4">
             <div class="form-group">
-              <label for="Name">Name</label>
+              <label for="Type">Type</label>
               <input
                 type="text"
                 class="form-control"
-                id="Name"
-                placeholder="Name"
+                id="Type"
               />
             </div>
             <div class="form-group">
-              <label for="Description">Description</label>
-              <textarea
+              <label for="Date">Date</label>
+              <input
+              type="text"
                 class="form-control"
-                id="Description"
-                rows="3"
-              ></textarea>
+                id="Date"
+              />
             </div>
             <div class="form-group">
-              <label for="price">Price</label>
+              <label for="Status">Status</label>
               <input
-                type="number"
+                type="text"
                 class="form-control"
-                id="price"
-                placeholder="12"
+                id="Status"
               />
             </div>
             <div class="d-flex justify-content-end">
