--- a/src/app/core/category/category.component.html
+++ b/src/app/core/category/category.component.html
@@ -29,7 +29,7 @@
                   <ng-container *ngFor="let item of list; let i = index">
                     <tr>
                       <td>{{ item.id }}</td>
-                      <td>{{ item.name }}</td>
+                      <td>{{ item.nom }}</td>
                       <td>{{ item.description }}</td>
                       <td>
                         <div class="btn-group">
