--- a/src/app/core/category/manage-category/manage-category.component.html
+++ b/src/app/core/category/manage-category/manage-category.component.html
@@ -7,14 +7,14 @@
           <div class="card-header py-3 d-flex justify-content-between">
             <p class="text-primary m-0 fw-bold">Create a new category</p>
           </div>
-          <form class="ml-4 mr-4 mt-4 mb-4">
+          <form [formGroup]="categoryForm" class="ml-4 mr-4 mt-4 mb-4">
             <div class="form-group">
               <label for="Name">Name</label>
               <input
                 type="text"
                 class="form-control"
                 id="Name"
-                
+                formControlName="nom"
               />
             </div>
             <div class="form-group">
@@ -23,6 +23,7 @@
                 class="form-control"
                 id="Description"
                 rows="3"
+                formControlName="description"
               ></textarea>
             </div>
             <div class="d-flex justify-content-end">
